Link to kickstarter and fix with overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,16 +21,25 @@ p {
     /* margin-left: 10px; */
 }
 
+.links_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position:absolute;
+    top: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 
 .headerLinks {
     display:flex;
     justify-content: center;
     align-items: center;
-    z-index: 100;
-    position:absolute;
-    top: 25%;
-    left: 50%;
-    transform: translateX(-50%);
+    position:relative;
+    /* left: 50%;
+    transform: translateX(-50%); */
 }
 
 .containerWrap {
@@ -43,7 +52,7 @@ p {
     display: flex;
     justify-content: center;
     height: 100vh;
-    overflow:visible !important;
+    /* overflow:visible !important; */
 }
 
 .parallaxChild {
